public/style/main.css
/**
 * Fonts
 */

p, h1, h2, a, label {
  width: 100%;
  font-family: Arial, Helvetica, sans-serif;
  text-align: center;
}

/**
 * Table
 */

table, th, td {
  border: 2px solid black;
  border-collapse: collapse;
  color: black;
  font-family: Arial, Helvetica, sans-serif;
}

/**
 *  Header
 */

#header {
  position: relative;
  display: block;
  text-align: center;
}

.header_title {
  text-align: center;
}

/**
 * Navigation bar
 */

 .header_navbar {
   text-align: center;
 }

 ul {
  margin: 0;
  padding: 50px;
}

li {
  display: inline;
}

/**
 * Form
 */

form {
  /* Center the form onto the page itself */
  margin: 0 auto;
  /* Ensure, that the form fits all devices */
  width: 66%;
  /* Ensures the outline of the form is visible. */
  padding: 1em;
  background-color: rgba(2, 2, 2, 0.5);
  border-radius: 1em;
}

/**
 * Background common settings.
 */

body {
  background-image: linear-gradient(#158000, #61ff06);
  background-repeat: no-repeat;
  background-attachment: fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  margin: 0;
  width: 100%;
  height: 200%;
}

/**
 * On mobile devices: Align tables and headers in the center. 
 * Ensure, that there is some space between refresh button and measurement table.
 * Hide chart, as it is not readable regardless.
 */

@media 
only screen and (max-width: 760px),
(min-device-width: 768px) and (max-device-width: 1024px)  {

  /* Align headers in the center for readability */
  h1, h2 {
    text-align: center;
  }

  /* Header for chart is removed */
  h4 {
    visibility: hidden
  }

  /* Chart can't be read on mobile anyway, so we just remove it.*/
  #myChart {
    visibility: hidden;
  }

  /* Table headers serve no use on mobile tables */
  .tableheader {
    visibility: hidden;
  }

	/* Force table to not be like tables anymore */
	table, thead, tbody, th, td, tr { 
		display: block; 
	}
	
	/* Hide table headers (but not display: none;, for accessibility) */
	thead tr { 
		position: absolute;
		top: -9999px;
		left: -9999px;
	}
	
	tr { 
    border: 1px solid; 
  }
	
	td { 
		/* Behave  like a "row" */
		border: none;
		border-bottom: 3px solid; 
		position: relative;
		padding-left: 50%; 
	}
	
	td:before { 
		/* Now like a table header */
		position: absolute;
		/* Top/left values mimic padding */
		top: 6px;
		left: 6px;
		width: 45%; 
		padding-right: 10px; 
		white-space: nowrap;
	}
	
	/*
	Label the data
	*/
	td:nth-of-type(1):before { content: "Temperature"; }
	td:nth-of-type(2):before { content: "Humidity"; }
	td:nth-of-type(3):before { content: "Time"; }
	td:nth-of-type(4):before { content: "Worker name"; }
	td:nth-of-type(5):before { content: "Plant state"; }
	td:nth-of-type(6):before { content: "Workers assessment"; }
}

/**
 * On larger devices: Let elements be aligned to the left, but ensure, 
 * there is some space from the edge of the screen to preserve readability.
 */

@media only screen and (min-width: 768px) {
  .tableheader {
    margin-left: 4.5%;
  }

  table {
    margin-left: 4.5%;
    margin-bottom: 3.5%;
  }
}

